# SpeedrunTools

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
etc/: speedruntools.set
src/: BaseBakkesModPlugin.cpp  BaseBakkesModPlugin.h  FreePlayToolsPlugin.cpp  FreePlayToolsPlugin.h  NetcodePlugin.h  ObjectGraph.cpp  ObjectGraph.h  PluginComponent.h  PluginController.cpp  PluginController.h  PluginModel.cpp  PluginModel.h  PluginToolkit.h  PluginView.cpp  PluginView.h  SpeedrunTools.cpp  SpeedrunTools.h  SpeedrunToolsPlugin.cpp  SpeedrunToolsPlugin.h  pch.h
src/component/: PluginComponent.h
src/component/ball/: BallAnalysisComponent.cpp  BallAnalysisComponent.h
src/component/car/: AutoAirRollComponent.cpp  AutoAirRollComponent.h  BoostMutatorComponent.cpp  BoostMutatorComponent.h  CarAnalysisComponent.cpp  CarAnalysisComponent.h
src/component/game/: GameGravityComponent.cpp  GameGravityComponent.h  GameSpeedComponent.cpp  GameSpeedComponent.h
src/component/kismet/: SequenceVariableComponent.cpp  SequenceVariableComponent.h
src/component/livesplit/: LiveSplitComponent.cpp  LiveSplitComponent.h
src/component/livesplit/autosplitter/: PanicsAirRaceBeachAutoSplitter.cpp  (+1 more)
src/component/savestate/: RewindBuffer.cpp  RewindBuffer.h  RewindStateComponent.cpp  RewindStateComponent.h  SaveStateComponent.cpp  SaveStateComponent.h
src/components/: GeneralToolsComponent.cpp  GeneralToolsComponent.h  KismetComponent.cpp  KismetComponent.h  KismetEditorComponent.cpp  KismetEditorComponent.h  LiveSplitComponent.cpp  LiveSplitComponent.h  MapToolsComponent.cpp  MapToolsComponent.h  MultiComponent.cpp  MultiComponent.h  MutatorsComponent.cpp  MutatorsComponent.h  PluginComponentBase.cpp  PluginComponentBase.h  SaveStatesComponent.cpp  SaveStatesComponent.h  TestComponent.cpp  TestComponent.h
src/components/autosplitter/: AutoSplitterComponent.cpp  AutoSplitterComponent.h
src/components/autosplitters/: AutoSplitter.h  AutoSplitterBase.cpp  AutoSplitterBase.h  AutoSplitterFactory.cpp  AutoSplitterFactory.h  AutoSplitterManager.cpp  AutoSplitterManager.h  AutoSplitterNull.cpp  AutoSplitterNull.h  Dribble2OverhaulAutoSplitter.cpp  Dribble2OverhaulAutoSplitter.h
src/components/car/: AirRollComponent.cpp  AirRollComponent.h  AutoAirRollComponent.cpp  AutoAirRollComponent.h  BoostComponent.cpp  BoostComponent.h
src/components/experimental/: ExperimentalComponent.cpp  ExperimentalComponent.h  TestVar.cpp  TestVar.h
src/components/game/: GameGravityComponent.cpp  GameGravityComponent.h  GameSpeedComponent.cpp  GameSpeedComponent.h
src/components/generaltools/: GeneralToolsComponent.cpp  GeneralToolsComponent.h
src/components/kismet/: KismetEditorComponent.cpp  KismetEditorComponent.h  KismetModel.cpp  KismetModel.h  KismetViewerComponent.cpp  KismetViewerComponent.h
src/components/livesplit/: AutoSplitter.h  AutoSplitterComponent.cpp  AutoSplitterComponent.h  AutoSplitterFactory.cpp  AutoSplitterFactory.h  AutoSplitterSupportedRun.cpp  AutoSplitterSupportedRun.h  LiveSplitComponent.cpp  LiveSplitComponent.h  LiveSplitModel.cpp  LiveSplitModel.h  LiveSplitRemoteComponent.cpp  LiveSplitRemoteComponent.h
src/components/maptools/: AutoSplitterComponent.cpp  AutoSplitterComponent.h  MapTools.h  MapToolsBase.cpp  MapToolsBase.h  MapToolsComponent.cpp  MapToolsComponent.h  MapToolsModel.cpp  MapToolsModel.h  MapToolsSelectorComponent.cpp  MapToolsSelectorComponent.h
src/components/savestate/: RewindBuffer.h  RewindStateComponent.cpp  RewindStateComponent.h  SaveStateComponent.cpp  SaveStateComponent.h
src/components/savestates/: RewindComponent.cpp  RewindComponent.h  SaveStateComponent.cpp  SaveStateComponent.h  SaveStatesComponent.cpp  SaveStatesComponent.h
src/livesplit/: LiveSplitConnectView.cpp  LiveSplitConnectView.h  LiveSplitController.cpp  LiveSplitController.h  LiveSplitFullView.cpp  LiveSplitFullView.h  LiveSplitModel.cpp  LiveSplitModel.h
src/models/: BallState.cpp  BallState.h  CarState.cpp  CarState.h  GameState.cpp  GameState.h  KismetSequenceVariable.cpp  KismetSequenceVariable.h  KismetVar.cpp  KismetVar.h  RewindBuffer.cpp  RewindBuffer.h  SaveState.cpp  SaveState.h
src/models/collision/: Rect3d.cpp  Rect3d.h
src/plugin/: BaseBakkesModPlugin.cpp  BaseBakkesModPlugin.h  PluginComponent.cpp  PluginComponent.h
src/services/: LiveSplitClient.cpp  LiveSplitClient.h  MultiEventHooker.cpp  MultiEventHooker.h
src/toolkit/: PluginToolkit.cpp  PluginToolkit.h
src/toolkit/analysis/: AnalysisToolkit.cpp  AnalysisToolkit.h
src/toolkit/game/: GameToolkit.cpp  GameToolkit.h
src/toolkit/kismet/: KismetToolkit.cpp  KismetToolkit.h
src/toolkit/livesplit/: LiveSplitToolkit.cpp  LiveSplitToolkit.cpp~  LiveSplitToolkit.h
src/toolkit/mutators/: MutatorsToolkit.cpp  MutatorsToolkit.h
src/toolkit/savestate/: SaveStateToolkit.cpp  SaveStateToolkit.h
src/toolkit/test/: TestToolkit.cpp  TestToolkit.h
src/toolkits/: GeneralToolsToolkit.cpp  GeneralToolsToolkit.h  KismetToolkit.cpp  KismetToolkit.h  LiveSplitToolkit.cpp  LiveSplitToolkit.h  MapToolsToolkit.cpp  MapToolsToolkit.h  PluginToolkit.cpp  PluginToolkit.h  PluginToolkitBase.cpp  PluginToolkitBase.h  SaveStatesToolkit.cpp  SaveStatesToolkit.h
src/toolkits/game/: GameToolkit.cpp  GameToolkit.h
src/toolkits/livesplit/: LiveSplitToolkit.cpp  LiveSplitToolkit.h
src/toolkits/savestate/: SaveState.cpp  SaveState.h  SaveStateBuffer.cpp  SaveStateBuffer.h  SaveStateToolkit.cpp  SaveStateToolkit.h
src/toolkits/test/: TestToolkit.cpp  TestToolkit.h
src/utils/: CVarFunctions.cpp  CVarFunctions.h  CVars.h  HelperFunctions.cpp  HelperFunctions.h  ImGuiExtensions.cpp  ImGuiExtensions.h  LocalControllerInputFix.cpp  LocalControllerInputFix.h
tmp/: AirDribbleHoopsAutoSplitter.cpp  LethsGiantRingsAutoSplitter.cpp  LethsGiantRingsAutoSplitter.h  PanicsAirRaceBeachAutoSplitter.cpp  SpeedJumpRings1AutoSplitter.cpp  SpeedJumpRings1AutoSplitter.h  SpeedJumpTrials1AutoSplitter.cpp  TutorialAdvancedAutoSplitter.cpp  TutorialAdvancedAutoSplitter.h
tools/: bakkes_patchplugin.py  hotswap.py
(+144 files in other folders)
